ecmascript/parser/tests/test262-error-references/fail/f6cc48c72caf2e32.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/f6cc48c72caf2e32.js:1:4
  |
1 | ++1
  |    ^

error: Cannot assign to this
 --> $DIR/tests/test262-parser/fail/f6cc48c72caf2e32.js:1:3
  |
1 | ++1
  |   ^

